src/main/java/art/scidsgn/layoutgen/rulecode/RulecodeParser.java
package art.scidsgn.layoutgen.rulecode;

// Generated from java-escape by ANTLR 4.11.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RulecodeParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            NUMBER = 1, HEXCOLOR = 2, STRING = 3, TRUE = 4, FALSE = 5, IMPORT_KEYWORD = 6, AS_KEYWORD = 7,
            BUILTIN_ID = 8, ANNOTATION_ID = 9, VARIABLE_ID = 10, ID = 11, IS_EQUALS = 12, ARROW = 13,
            EQUALS = 14, COMMA = 15, SEMI = 16, BAR = 17, DOT = 18, LPAREN = 19, RPAREN = 20, LBRACKET = 21,
            RBRACKET = 22, LBRACE = 23, RBRACE = 24, WS = 25;
    public static final int
            RULE_program = 0, RULE_importStatement = 1, RULE_isRule = 2, RULE_isBranch = 3,
            RULE_isVars = 4, RULE_rewriteRule = 5, RULE_rewriteBranch = 6, RULE_annotationFn = 7,
            RULE_builtinFn = 8, RULE_fnCallArgs = 9, RULE_fnCallArg = 10, RULE_fnCallBody = 11,
            RULE_element = 12, RULE_branchWeight = 13, RULE_branchSep = 14, RULE_moduleRuleName = 15,
            RULE_ruleName = 16, RULE_annotationName = 17, RULE_builtinName = 18, RULE_variableName = 19,
            RULE_number = 20, RULE_color = 21, RULE_string = 22, RULE_boolean = 23;

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "importStatement", "isRule", "isBranch", "isVars", "rewriteRule",
                "rewriteBranch", "annotationFn", "builtinFn", "fnCallArgs", "fnCallArg",
                "fnCallBody", "element", "branchWeight", "branchSep", "moduleRuleName",
                "ruleName", "annotationName", "builtinName", "variableName", "number",
                "color", "string", "boolean"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, "'true'", "'false'", "'import'", "'as'", null,
                null, null, null, "':='", "'->'", "'='", "','", "';'", "'|'", "'.'",
                "'('", "')'", "'['", "']'", "'{'", "'}'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "NUMBER", "HEXCOLOR", "STRING", "TRUE", "FALSE", "IMPORT_KEYWORD",
                "AS_KEYWORD", "BUILTIN_ID", "ANNOTATION_ID", "VARIABLE_ID", "ID", "IS_EQUALS",
                "ARROW", "EQUALS", "COMMA", "SEMI", "BAR", "DOT", "LPAREN", "RPAREN",
                "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "java-escape";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public RulecodeParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(RulecodeParser.EOF, 0);
        }

        public List<ImportStatementContext> importStatement() {
            return getRuleContexts(ImportStatementContext.class);
        }

        public ImportStatementContext importStatement(int i) {
            return getRuleContext(ImportStatementContext.class, i);
        }

        public List<IsRuleContext> isRule() {
            return getRuleContexts(IsRuleContext.class);
        }

        public IsRuleContext isRule(int i) {
            return getRuleContext(IsRuleContext.class, i);
        }

        public List<RewriteRuleContext> rewriteRule() {
            return getRuleContexts(RewriteRuleContext.class);
        }

        public RewriteRuleContext rewriteRule(int i) {
            return getRuleContext(RewriteRuleContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitProgram(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(51);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(48);
                                importStatement();
                            }
                            break;
                            case 2: {
                                setState(49);
                                isRule();
                            }
                            break;
                            case 3: {
                                setState(50);
                                rewriteRule();
                            }
                            break;
                        }
                    }
                    setState(53);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (((_la) & ~0x3f) == 0 && ((1L << _la) & 2624L) != 0);
                setState(55);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ImportStatementContext extends ParserRuleContext {
        public TerminalNode IMPORT_KEYWORD() {
            return getToken(RulecodeParser.IMPORT_KEYWORD, 0);
        }

        public StringContext string() {
            return getRuleContext(StringContext.class, 0);
        }

        public TerminalNode AS_KEYWORD() {
            return getToken(RulecodeParser.AS_KEYWORD, 0);
        }

        public RuleNameContext ruleName() {
            return getRuleContext(RuleNameContext.class, 0);
        }

        public ImportStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_importStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterImportStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitImportStatement(this);
        }
    }

    public final ImportStatementContext importStatement() throws RecognitionException {
        ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_importStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                match(IMPORT_KEYWORD);
                setState(58);
                string();
                setState(59);
                match(AS_KEYWORD);
                setState(60);
                ruleName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IsRuleContext extends ParserRuleContext {
        public RuleNameContext ruleName() {
            return getRuleContext(RuleNameContext.class, 0);
        }

        public TerminalNode IS_EQUALS() {
            return getToken(RulecodeParser.IS_EQUALS, 0);
        }

        public List<IsBranchContext> isBranch() {
            return getRuleContexts(IsBranchContext.class);
        }

        public IsBranchContext isBranch(int i) {
            return getRuleContext(IsBranchContext.class, i);
        }

        public List<AnnotationFnContext> annotationFn() {
            return getRuleContexts(AnnotationFnContext.class);
        }

        public AnnotationFnContext annotationFn(int i) {
            return getRuleContext(AnnotationFnContext.class, i);
        }

        public IsVarsContext isVars() {
            return getRuleContext(IsVarsContext.class, 0);
        }

        public List<BranchSepContext> branchSep() {
            return getRuleContexts(BranchSepContext.class);
        }

        public BranchSepContext branchSep(int i) {
            return getRuleContext(BranchSepContext.class, i);
        }

        public IsRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_isRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterIsRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitIsRule(this);
        }
    }

    public final IsRuleContext isRule() throws RecognitionException {
        IsRuleContext _localctx = new IsRuleContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_isRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ANNOTATION_ID) {
                    {
                        {
                            setState(62);
                            annotationFn();
                        }
                    }
                    setState(67);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(68);
                ruleName();
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAREN) {
                    {
                        setState(69);
                        isVars();
                    }
                }

                setState(72);
                match(IS_EQUALS);
                setState(73);
                isBranch();
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == BAR) {
                    {
                        {
                            setState(74);
                            branchSep();
                            setState(75);
                            isBranch();
                        }
                    }
                    setState(81);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IsBranchContext extends ParserRuleContext {
        public BranchWeightContext branchWeight() {
            return getRuleContext(BranchWeightContext.class, 0);
        }

        public List<ElementContext> element() {
            return getRuleContexts(ElementContext.class);
        }

        public ElementContext element(int i) {
            return getRuleContext(ElementContext.class, i);
        }

        public IsBranchContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_isBranch;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterIsBranch(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitIsBranch(this);
        }
    }

    public final IsBranchContext isBranch() throws RecognitionException {
        IsBranchContext _localctx = new IsBranchContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_isBranch);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LBRACKET) {
                    {
                        setState(82);
                        branchWeight();
                    }
                }

                setState(86);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1: {
                            {
                                setState(85);
                                element();
                            }
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(88);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IsVarsContext extends ParserRuleContext {
        public TerminalNode LPAREN() {
            return getToken(RulecodeParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(RulecodeParser.RPAREN, 0);
        }

        public List<VariableNameContext> variableName() {
            return getRuleContexts(VariableNameContext.class);
        }

        public VariableNameContext variableName(int i) {
            return getRuleContext(VariableNameContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(RulecodeParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(RulecodeParser.COMMA, i);
        }

        public IsVarsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_isVars;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterIsVars(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitIsVars(this);
        }
    }

    public final IsVarsContext isVars() throws RecognitionException {
        IsVarsContext _localctx = new IsVarsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_isVars);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                match(LPAREN);
                setState(99);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == VARIABLE_ID) {
                    {
                        setState(91);
                        variableName();
                        setState(96);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(92);
                                    match(COMMA);
                                    setState(93);
                                    variableName();
                                }
                            }
                            setState(98);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(101);
                match(RPAREN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RewriteRuleContext extends ParserRuleContext {
        public RuleNameContext ruleName() {
            return getRuleContext(RuleNameContext.class, 0);
        }

        public TerminalNode ARROW() {
            return getToken(RulecodeParser.ARROW, 0);
        }

        public List<RewriteBranchContext> rewriteBranch() {
            return getRuleContexts(RewriteBranchContext.class);
        }

        public RewriteBranchContext rewriteBranch(int i) {
            return getRuleContext(RewriteBranchContext.class, i);
        }

        public List<AnnotationFnContext> annotationFn() {
            return getRuleContexts(AnnotationFnContext.class);
        }

        public AnnotationFnContext annotationFn(int i) {
            return getRuleContext(AnnotationFnContext.class, i);
        }

        public List<BranchSepContext> branchSep() {
            return getRuleContexts(BranchSepContext.class);
        }

        public BranchSepContext branchSep(int i) {
            return getRuleContext(BranchSepContext.class, i);
        }

        public RewriteRuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rewriteRule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterRewriteRule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitRewriteRule(this);
        }
    }

    public final RewriteRuleContext rewriteRule() throws RecognitionException {
        RewriteRuleContext _localctx = new RewriteRuleContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_rewriteRule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ANNOTATION_ID) {
                    {
                        {
                            setState(103);
                            annotationFn();
                        }
                    }
                    setState(108);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(109);
                ruleName();
                setState(110);
                match(ARROW);
                setState(111);
                rewriteBranch();
                setState(117);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == BAR) {
                    {
                        {
                            setState(112);
                            branchSep();
                            setState(113);
                            rewriteBranch();
                        }
                    }
                    setState(119);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RewriteBranchContext extends ParserRuleContext {
        public BranchWeightContext branchWeight() {
            return getRuleContext(BranchWeightContext.class, 0);
        }

        public List<RuleNameContext> ruleName() {
            return getRuleContexts(RuleNameContext.class);
        }

        public RuleNameContext ruleName(int i) {
            return getRuleContext(RuleNameContext.class, i);
        }

        public RewriteBranchContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rewriteBranch;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterRewriteBranch(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitRewriteBranch(this);
        }
    }

    public final RewriteBranchContext rewriteBranch() throws RecognitionException {
        RewriteBranchContext _localctx = new RewriteBranchContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_rewriteBranch);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LBRACKET) {
                    {
                        setState(120);
                        branchWeight();
                    }
                }

                setState(124);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1: {
                            {
                                setState(123);
                                ruleName();
                            }
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(126);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AnnotationFnContext extends ParserRuleContext {
        public AnnotationNameContext annotationName() {
            return getRuleContext(AnnotationNameContext.class, 0);
        }

        public FnCallArgsContext fnCallArgs() {
            return getRuleContext(FnCallArgsContext.class, 0);
        }

        public FnCallBodyContext fnCallBody() {
            return getRuleContext(FnCallBodyContext.class, 0);
        }

        public AnnotationFnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_annotationFn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterAnnotationFn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitAnnotationFn(this);
        }
    }

    public final AnnotationFnContext annotationFn() throws RecognitionException {
        AnnotationFnContext _localctx = new AnnotationFnContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_annotationFn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(128);
                annotationName();
                setState(130);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAREN) {
                    {
                        setState(129);
                        fnCallArgs();
                    }
                }

                setState(133);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LBRACE) {
                    {
                        setState(132);
                        fnCallBody();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BuiltinFnContext extends ParserRuleContext {
        public BuiltinNameContext builtinName() {
            return getRuleContext(BuiltinNameContext.class, 0);
        }

        public FnCallArgsContext fnCallArgs() {
            return getRuleContext(FnCallArgsContext.class, 0);
        }

        public FnCallBodyContext fnCallBody() {
            return getRuleContext(FnCallBodyContext.class, 0);
        }

        public BuiltinFnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_builtinFn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterBuiltinFn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitBuiltinFn(this);
        }
    }

    public final BuiltinFnContext builtinFn() throws RecognitionException {
        BuiltinFnContext _localctx = new BuiltinFnContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_builtinFn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                builtinName();
                setState(137);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAREN) {
                    {
                        setState(136);
                        fnCallArgs();
                    }
                }

                setState(140);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LBRACE) {
                    {
                        setState(139);
                        fnCallBody();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FnCallArgsContext extends ParserRuleContext {
        public TerminalNode LPAREN() {
            return getToken(RulecodeParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(RulecodeParser.RPAREN, 0);
        }

        public List<FnCallArgContext> fnCallArg() {
            return getRuleContexts(FnCallArgContext.class);
        }

        public FnCallArgContext fnCallArg(int i) {
            return getRuleContext(FnCallArgContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(RulecodeParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(RulecodeParser.COMMA, i);
        }

        public FnCallArgsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fnCallArgs;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterFnCallArgs(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitFnCallArgs(this);
        }
    }

    public final FnCallArgsContext fnCallArgs() throws RecognitionException {
        FnCallArgsContext _localctx = new FnCallArgsContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_fnCallArgs);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                match(LPAREN);
                setState(151);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(143);
                        fnCallArg();
                        setState(148);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(144);
                                    match(COMMA);
                                    setState(145);
                                    fnCallArg();
                                }
                            }
                            setState(150);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(153);
                match(RPAREN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FnCallArgContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(RulecodeParser.ID, 0);
        }

        public TerminalNode EQUALS() {
            return getToken(RulecodeParser.EQUALS, 0);
        }

        public ElementContext element() {
            return getRuleContext(ElementContext.class, 0);
        }

        public FnCallArgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fnCallArg;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterFnCallArg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitFnCallArg(this);
        }
    }

    public final FnCallArgContext fnCallArg() throws RecognitionException {
        FnCallArgContext _localctx = new FnCallArgContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_fnCallArg);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(155);
                match(ID);
                setState(156);
                match(EQUALS);
                setState(157);
                element();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FnCallBodyContext extends ParserRuleContext {
        public TerminalNode LBRACE() {
            return getToken(RulecodeParser.LBRACE, 0);
        }

        public TerminalNode RBRACE() {
            return getToken(RulecodeParser.RBRACE, 0);
        }

        public List<ElementContext> element() {
            return getRuleContexts(ElementContext.class);
        }

        public ElementContext element(int i) {
            return getRuleContext(ElementContext.class, i);
        }

        public FnCallBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fnCallBody;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).enterFnCallBody(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof RulecodeListener) ((RulecodeListener) listener).exitFnCallBody(this);
        }
    }

    public final FnCallBodyContext fnCallBody() throws RecognitionException {
        FnCallBodyContext _localctx = new FnCallBodyContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_fnCallBody);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(159);
                match(LBRACE);
                setState(163);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((_la) & ~0x3f) == 0 && ((1L << _la) & 3390L) != 0) {
                    {
                        {
                            setState(160);
                            element();
                        }
                    }
                    setState(165);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(166);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ElementContext extends ParserRuleContext {
        public ModuleRuleNameContext moduleRuleName() {
            return getRuleContext(ModuleRuleNameContext.class, 0);
        }

        public NumberContext number() {
            return getRuleContext(NumberContext.class, 0);
        }

        public ColorContext color() {
            return getRuleContext(ColorContext.class, 0);
        }

        public StringContext string() {
            return getRuleContext(StringContext.class, 0);
        }

        public BooleanContext boolean_() {
            return getRuleContext(BooleanContext.class, 0);
        }

        public VariableNameContext variableName() {
            return getRuleContext(VariableNameContext.class, 0);
        }

        public BuiltinFnContext builtinFn() {
            return getRuleContext(BuiltinFnContext.class, 0);
        }

        public ElementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_element;
        }
